# libogscore

./: .gitignore  Makefile.am  README.md  configure.ac  ogscore-1.0.pc.in  ogscrypt-1.0.pc.in
debian/: changelog  control  copyright  ogscore-1.0-0.install  ogscrypt-1.0-0.install  rules
src/: Makefile.am  ogs-core.h  ogs-crypt.h  ogs-prelude.h
src/core/: Makefile.am  abts.c  abts.h  ogs-3gpp-types.c  ogs-3gpp-types.h  ogs-abort.c  ogs-abort.h  ogs-compat.h  ogs-conv.c  ogs-conv.h  ogs-core.c  ogs-env.c  ogs-env.h  ogs-epoll.c  ogs-errno.c  ogs-errno.h  ogs-fsm.c  ogs-fsm.h  ogs-getopt.c  ogs-getopt.h  ogs-hash.h  ogs-kqueue.c  ogs-list.h  ogs-log.c  ogs-log.h  ogs-macros.h  ogs-memory.c  ogs-memory.h  ogs-misc.c  ogs-misc.h  ogs-notify.c  ogs-notify.h  ogs-pkbuf.c  ogs-pkbuf.h  ogs-poll-private.h  ogs-poll.h  ogs-pool.h  ogs-process.c  ogs-process.h  ogs-queue.h  (+27 more)
src/crypt/: Makefile.am  ogs-aes-cmac.h  ogs-aes.h  ogs-sha1-hmac.c  ogs-sha1-hmac.h  ogs-sha1.c  ogs-sha1.h  ogs-sha2-hmac.c  ogs-sha2-hmac.h  ogs-sha2.h
tests/: Makefile.am  log-compiler.sh
tests/core/: Makefile.am  abts-main.c  conv-test.c  hash-test.c  poll-test.c  pool-test.c  process-test.c  socket-test.c  timer-test.c  tlv-test.c
tests/crypt/: Makefile.am  abts-main.c  sha-test.c
